[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dynpssimpy-rt"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = {file="LICENSE"}
version = "0.0.1"
keywords = []
authors = [
  { name = "Hallvar Haugdal", email = "hallvar.haugdal@sintef.no" },
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
dependencies = [
	"numpy",
	"scipy",
	"synchrophasor @ git+https://github.com/hallvar-h/pypmu",
	"dynpssimpy @ git+https://github.com/hallvar-h/DynPSSimPy@SubModules",
	"PySide6",
	"pyqtgraph",
	]

[project.urls]
"Homepage" = "https://github.com/hallvar-h/DynPSSimPy-RT"
"Bug Tracker" = "https://github.com/hallvar-h/DynPSSimPy-RT/issues"
