[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tops-rt"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = {file="LICENSE"}
version = "0.0.2"
keywords = []
authors = [
  { name = "Hallvar Haugdal", email = "hallvar.haugdal@sintef.no" },
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
dependencies = [
	"numpy",
	"scipy",
	"synchrophasor @ git+https://github.com/hallvar-h/pypmu",
	"tops @ git+https://github.com/hallvar-h/TOPS",
	"PySide6",
	"pyqtgraph",
	"networkx",
	"PyOpenGL",
	#"PyOpenGL_accelerate",
	]

[project.urls]
"Homepage" = "https://github.com/hallvar-h/TOPS-RT"
"Bug Tracker" = "https://github.com/hallvar-h/TOPS-RT/issues"
